--- a/style.css
+++ b/style.css
@@ -29,6 +29,21 @@ body {
   animation: slide 5s linear infinite;
 }
 
+.wrapper-child {
+  
+  position: absolute;
+  top: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-left: 20px;
+  text-align: left;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  color: rgb(47, 176, 236);
+}
+
 @keyframes slide {
   0% {
     background-position: 0 -1000px;
@@ -82,7 +97,6 @@ body button {
   }
 }
 
-
 .pulsate {
   animation: pulsate 1s infinite;
 }
@@ -94,7 +108,6 @@ body button {
 @keyframes pulsate {
   0% {
     transform: scale(1);
-    
   }
   50% {
     transform: scale(1.1);
@@ -102,7 +115,6 @@ body button {
   }
   100% {
     transform: scale(1);
-
   }
 }
 
@@ -121,6 +133,7 @@ body button {
   }
 }
 
-.player, .player2 {
+.player,
+.player2 {
   transition: transform 0.5s ease-in;
 }
