--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
   background-size: cover;
   background-position: center;
   animation: slide 5s linear infinite;
+  border: 12px solid red;
 }
 
 .wrapper-child {
